--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
   },
   "homepage": "https://github.com/cbratschi/private-media#readme",
   "devDependencies": {
+    "cssnano": "^5.1.15",
     "eslint": "^8.36.0",
     "gulp": "^4.0.2",
+    "gulp-cssnano": "^2.1.3",
     "gulp-rename": "^2.0.0",
     "gulp-terser": "^2.1.0",
     "gulp-util": "^3.0.8"
